federated-prometheus/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: prometheus-pelorus
  name: prometheus-pelorus
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-pelorus-tls
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  - name: web-tls
    port: 9091
    protocol: TCP
    targetPort: web-tls
  selector:
    app: prometheus
    prometheus: prometheus-pelorus
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
